# pymediawikidocker

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: index.md
mwdocker/: config.py  dimage.py  docker.py  docker_map.py  html_table.py  logger.py  mariadb.py  mw.py  mwcluster.py  mwdocker_cmd.py  mwimage.py  version.py  webscrape.py
mwdocker/resources/: extensions.json  extensions.yaml
mwdocker/resources/templates/: addCronTabEntry.sh  addSysopUser.sh  composer.local.json  disable_sudo.sh  fixPermissions.sh  initdb.sh  installExtensions.sh  install_djvu.sh  lang.sh  mwCompose.yml  mwComposeExternalDB.yml  mwDockerfile  mwLocalSettings.php  mwLocalSettings127.php  mwLocalSettings131.php  mwLocalSettings135.php  mwLocalSettings136.php  mwLocalSettings137.php  mwLocalSettings139.php  mwLocalSettings141.php  mwLocalSettings142.php  mwLocalSettings143.php  mwLocalSettings144.php  mwLocalSettings145.php  mwLocalSettings_path.php  mwWiki127.sql  mwWiki135.sql  mwWiki136.sql  mwWiki137.sql  mwWiki138.sql  mwWiki139.sql  mwWiki142.sql  mwWiki143.sql  my.cnf  phpinfo.php  plantuml.sh  setup-mediawiki-legacy.sh  setup-mediawiki.sh  startRunJobs.sh  update.sh  (+1 more)
resources/mw1_27_7/: Dockerfile
resources/mw1_31_14/: Dockerfile
resources/mw1_35_2/: Dockerfile
resources/templates/: mwCompose  mwCompose.yml  mwDockerfile  mwLocalSettings127.php  mwLocalSettings131.php  mwLocalSettings135.php  mwWiki131.sql  mwWiki135.sql
scripts/: blackisort  install  test
search/: search_index.json
tests/: basetest.py  test_config.py  test_docker.py  test_extensions.py  test_html_tables.py  test_install.py
