[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymediawikidocker"
description ="Python controlled (semantic) mediawiki docker application cluster installation"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"} 
dependencies = [
	#python-on-whales
	'python-on-whales>=0.56.0',
	# https://pypi.org/project/Jinja2/
	'Jinja2',
	#
	# avoid ModuleNotFoundError: No module named 'six'
	'six',
	# Access to SQL database
	# https://pypi.org/project/mysql-connector-python/
	'mysql-connector-python',
	# https://pypi.org/project/py-3rdparty-mediawiki/
	'py-3rdparty-mediawiki>=0.8.0',
	# https://pypi.org/project/pylodstorage/
	'pylodstorage>=0.4.8',
	# Beautiful Soup HTML parser
	# https://pypi.org/project/beautifulsoup4/
	'beautifulsoup4',
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "mwdocker/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pymediawikidocker"
Documentation = "https://wiki.bitplan.com/index.php/pymediawikidocker"
Source = "https://github.com/WolfgangFahl/pymediawikidocker"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "mwdocker",
]

[project.scripts]
mwcluster = "mwdocker.mwcluster:main"
