[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymediawikidocker"
description ="Python controlled (semantic) mediawiki docker application cluster installation"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
	# https://pypi.org/project/pybasemkit/
	# https://github.com/WolfgangFahl/pybasemkit
	# Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
	"pybasemkit>=0.0.8",
	#python-on-whales
	'python-on-whales>=0.77.0',
	# https://pypi.org/project/Jinja2/
	'Jinja2',
	# avoid ModuleNotFoundError: No module named 'six'
	'six',
	# Access to SQL database
	# https://pypi.org/project/mysql-connector-python/
	'mysql-connector-python',
	# https://pypi.org/project/py-3rdparty-mediawiki/
	'py-3rdparty-mediawiki>=0.17.0',
	# https://pypi.org/project/pylodstorage/
	'pylodstorage>=0.17.3',
	# Beautiful Soup HTML parser
	# https://pypi.org/project/beautifulsoup4/
	'beautifulsoup4',
	# https://github.com/konradhalas/dacite
	'dacite>=1.8.1',
]

requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "mwdocker/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pymediawikidocker"
Documentation = "https://wiki.bitplan.com/index.php/pymediawikidocker"
Source = "https://github.com/WolfgangFahl/pymediawikidocker"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["mwdocker"]

[tool.hatch.build.targets.wheel.sources]
"mwdocker" = "mwdocker"


[project.scripts]
mwcluster = "mwdocker.mwdocker_cmd:main"
